perf: before/after tables, G1 vs generational ZGC, JFR correlation